# django-admin-model-filters

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pylintrc  LICENSE  MANIFEST.in  README.md  manage.py  pytest.ini  setup.cfg  setup.py  tox.ini
acme/: __init__.py  urls.py  wsgi.py
acme/core/: __init__.py  admin.py  apps.py  models.py
acme/core/migrations/: 0001_initial.py  __init__.py
acme/fixtures/: data.json
acme/settings/: __init__.py  base.py  developer.py  test.py
acme/tests/: __init__.py
acme/tests/e2e/: __init__.py  list_filter_tests.py  modelfilter_change_tests.py  modelfilter_create_tests.py  modelfilter_delete_tests.py  modelfilter_view_tests.py  permissions_tests.py
model_filters/: __init__.py  apps.py  constants.py  utilities.py  utilities_tests.py
model_filters/admin/: __init__.py  field_filter_inline.py  list_filters.py  mixins.py  mixins_tests.py  model_filter.py  model_filter_tests.py
model_filters/forms/: __init__.py  field_filter.py  field_filter_tests.py  inline.py  inline_tests.py  model_filter.py  model_filter_tests.py  widgets.py  widgets_tests.py
model_filters/managers/: __init__.py  model_filter.py  model_filter_tests.py
model_filters/migrations/: 0001_initial.py
model_filters/models/: __init__.py  field_filter.py  field_filter_tests.py  model_filter.py  model_filter_tests.py
model_filters/static/model-filters/: model-filters.css  model-filters.js
model_filters/templates/admin/model_filters/: custom_change_form.html  custom_change_list.html  help.html
requirements/: developer.txt  flake8.txt  pylint.txt  test.txt
(+2 files in other folders)
