[metadata]
author = Darren Maki
version = attr: model_filters.__version__
description = Extension for filtering models by field in the admin interface.
long_description = file: README.md
long_description_content_type = text/markdown
keywords= django admin model field filter filters filtering
license = MIT

[bdist_wheel]
dist-dir=build/dist

[build]
build_base=build/raw
